# AudioPlaybackConnector

./: .gitignore  AudioPlaybackConnector.h  AudioPlaybackConnector.rc.in  AudioPlaybackConnector.sln  AudioPlaybackConnector.vcxproj  AudioPlaybackConnector.vcxproj.filters  CMakeLists.txt  README.md  SettingsUtil.hpp  packages.config  pch.h  resource.h
.github/workflows/: build.yaml
src/: AudioPlaybackConnector.cpp  AudioPlaybackConnector.h  AudioPlaybackConnector.rc.in  Direct2DSvg.hpp  SettingsUtil.hpp  pch.h  resource.h
